RESOLVED FIXED11848
REGRESSION (SearchField): Search field on developer.apple.com not drawn with top/bottom borders
https://bugs.webkit.org/show_bug.cgi?id=11848
Summary REGRESSION (SearchField): Search field on developer.apple.com not drawn with ...
David Kilzer (:ddkilzer)
Reported 2006-12-16 04:53:25 PST
The search field on http://developer.apple.com/ is not drawn with its top or bottom border in a locally-built debug build of WebKit r18251 with Safari 2.0.4 (419.3) on Mac OS X 10.4.8 (8L127). There is a highly suspicious SearchBoxFix() JavaScript method that may be doing Bad Things(tm), but I haven't investigated it yet.
Attachments
Screenshot (6.16 KB, image/png)
2006-12-16 04:55 PST, David Kilzer (:ddkilzer)
no flags
David Kilzer (:ddkilzer)
Comment 1 2006-12-16 04:55:27 PST
Created attachment 11877 [details] Screenshot
David Kilzer (:ddkilzer)
Comment 2 2006-12-16 05:18:30 PST
NOTE: This may need a Radar bug if it's an issue with the web site, not the implementation.
mitz
Comment 3 2006-12-16 05:27:31 PST
<input type="search" style="height: 15px;"> or anything smaller than 15px makes the horizontal borders disappear.
David Kilzer (:ddkilzer)
Comment 4 2006-12-16 07:04:39 PST
See Comment #3 for reduction.
Adele Peterson
Comment 5 2006-12-16 10:28:11 PST
<rdar://problem/4887422> REGRESSION (SearchField): Search field on developer.apple.com not drawn with top/bottom borders (11848)
mitz
Comment 6 2006-12-20 08:11:15 PST
*** Bug 11890 has been marked as a duplicate of this bug. ***
Adele Peterson
Comment 7 2007-01-04 11:37:49 PST
Committed revision 18585.
Note You need to log in before you can comment on or make changes to this bug.