LayoutTests:

Reviewed by Darin.

        Test for <rdar://problem/4887422>
        http://bugs.webkit.org/show_bug.cgi?id=11848
        REGRESSION (SearchField): Search field on developer.apple.com not drawn with top/bottom borders (11848)

        * fast/forms/searchfield-heights-expected.checksum: Added.
        * fast/forms/searchfield-heights-expected.png: Added.
        * fast/forms/searchfield-heights-expected.txt: Added.
        * fast/forms/searchfield-heights.html: Added.

WebCore:

        Reviewed by Darin.

        - Fix for <rdar://problem/4887422>
        http://bugs.webkit.org/show_bug.cgi?id=11848
        REGRESSION (SearchField): Search field on developer.apple.com not drawn with top/bottom borders (11848)

        Test: fast/forms/searchfield-heights.html

        Override the border and the height for search fields that use -webkit-appearance: searchfield.

        * css/html4.css: Use box-sizing: border-box for search fields.  We don't need to have the border-box quirk
          that we use for the other text fields for this control.
        * rendering/RenderThemeMac.h:
        * rendering/RenderThemeMac.mm:
        (WebCore::RenderThemeMac::searchFieldSizes): Added.
        (WebCore::RenderThemeMac::setSearchFieldSize): Added.
        (WebCore::RenderThemeMac::adjustSearchFieldStyle): Override the border and the height of the search field.



Canonical link: https://commits.webkit.org/15614@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@18585 268f45cc-cd09-0410-ab3c-d52691b4dbfc